--- a/Serializers/GameStudio.Serializers.Tests/GameStudio.Serializers.Tests.csproj
+++ b/Serializers/GameStudio.Serializers.Tests/GameStudio.Serializers.Tests.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
@@ -18,7 +19,7 @@
     <ProjectReference Include="..\..\GameStudio\GameStudio.Extensions\GameStudio.Extensions.csproj" />
     <ProjectReference Include="..\GameStudio.Serializers.Abstractions\GameStudio.Serializers.Abstractions.csproj" />
     <ProjectReference Include="..\GameStudio.Serializers.Jil\GameStudio.Serializers.Jil.csproj" />
-    <ProjectReference Include="..\GameStudio.Serializers.Newtonsoft\GameStudio.Serializers.Newtonsoft.csproj" />
+    <ProjectReference Include="..\GameStudio.Serializers.Newtonsoft\GameStudio.Serializers.NewtonSoft.csproj" />
   </ItemGroup>
 
 </Project>
